v1.1.0/modules/schema/pages/class/OperationalLimitType.adoc
= `OperationalLimitType`
:toclevels: 4


+++The operational meaning of a category of limits.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:OperationalLimitType`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`OperationalLimitType`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<OperationalLimit,`OperationalLimit`>>
//| [[slots_table.OperationalLimit]]<<OperationalLimit,`OperationalLimit`>>
| 0..* +
xref::class/OperationalLimit.adoc[`OperationalLimit`]
| +++The operational limits associated with this type of limit.+++
| _n/a_

| <<SourceOperationalLimitTypeScaling,`SourceOperationalLimitTypeScaling`>>
//| [[slots_table.SourceOperationalLimitTypeScaling]]<<SourceOperationalLimitTypeScaling,`SourceOperationalLimitTypeScaling`>>
| 0..* +
xref::class/OperatonalLimitTypeScaling.adoc[`OperatonalLimitTypeScaling`]
| _n/a_
| _n/a_

| <<TargetOperationalLimitmTypeScaling,`TargetOperationalLimitmTypeScaling`>>
//| [[slots_table.TargetOperationalLimitmTypeScaling]]<<TargetOperationalLimitmTypeScaling,`TargetOperationalLimitmTypeScaling`>>
| 0..1 +
xref::class/OperatonalLimitTypeScaling.adoc[`OperatonalLimitTypeScaling`]
| _n/a_
| _n/a_

| <<acceptableDuration,`acceptableDuration`>>
//| [[slots_table.acceptableDuration]]<<acceptableDuration,`acceptableDuration`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++The nominal acceptable duration of the limit. Limits are commonly expressed in terms of the time limit for which the limit...+++
| _n/a_

| <<direction,`direction`>>
//| [[slots_table.direction]]<<direction,`direction`>>
| 0..1 +
xref::enumeration/OperationalLimitDirectionKind.adoc[`OperationalLimitDirectionKind`]
| +++The direction of the limit.+++
| _n/a_

| <<isInfiniteDuration,`isInfiniteDuration`>>
//| [[slots_table.isInfiniteDuration]]<<isInfiniteDuration,`isInfiniteDuration`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Defines if the operational limit type has infinite duration. If true, the limit has infinite duration. If false, the limit...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#acceptableDuration]
=== `acceptableDuration`
+++The nominal acceptable duration of the limit. Limits are commonly expressed in terms of the time limit for which the limit is normally acceptable. The actual acceptable duration of a specific limit may depend on other local factors such as temperature or wind speed. The attribute has meaning only if the flag isInfiniteDuration is set to false, hence it shall not be exchanged when isInfiniteDuration is set to true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OperationalLimitType.acceptableDuration`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.acceptableDuration,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#direction]
=== `direction`
+++The direction of the limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OperationalLimitType.direction`
| Cardinality
| 0..1
| Type
| xref::enumeration/OperationalLimitDirectionKind.adoc[`OperationalLimitDirectionKind`]


|===

////
[.text-left]
--
<<slots_table.direction,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isInfiniteDuration]
=== `isInfiniteDuration`
+++Defines if the operational limit type has infinite duration. If true, the limit has infinite duration. If false, the limit has definite duration which is defined by the attribute acceptableDuration.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OperationalLimitType.isInfiniteDuration`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isInfiniteDuration,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OperationalLimit]
=== `OperationalLimit`
+++The operational limits associated with this type of limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OperationalLimitType.OperationalLimit`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimit.adoc[`OperationalLimit`]


|===

////
[.text-left]
--
<<slots_table.OperationalLimit,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#SourceOperationalLimitTypeScaling]
=== `SourceOperationalLimitTypeScaling`



[cols="h,4",width=65%]
|===
| URI
| `cim:OperationalLimitType.SourceOperationalLimitTypeScaling`
| Cardinality
| 0..*
| Type
| xref::class/OperatonalLimitTypeScaling.adoc[`OperatonalLimitTypeScaling`]


|===

////
[.text-left]
--
<<slots_table.SourceOperationalLimitTypeScaling,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetOperationalLimitmTypeScaling]
=== `TargetOperationalLimitmTypeScaling`



[cols="h,4",width=65%]
|===
| URI
| `cim:OperationalLimitType.TargetOperationalLimitmTypeScaling`
| Cardinality
| 0..1
| Type
| xref::class/OperatonalLimitTypeScaling.adoc[`OperatonalLimitTypeScaling`]


|===

////
[.text-left]
--
<<slots_table.TargetOperationalLimitmTypeScaling,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/OperationalLimit.adoc[`OperationalLimit`] | xref::class/OperationalLimit.adoc#OperationalLimitType[`OperationalLimitType`]



| xref::class/OperatonalLimitTypeScaling.adoc[`OperatonalLimitTypeScaling`] | xref::class/OperatonalLimitTypeScaling.adoc#TargetOperationalLimit[`TargetOperationalLimit`]


|===

